Added theme override css

--- a/app/Resources/views/blank.html.twig
+++ b/app/Resources/views/blank.html.twig
@@ -7,7 +7,8 @@
     <link rel="icon" sizes="16x16" href="{{ asset('favicon.ico') }}" />
 
     <link rel="stylesheet" href="{{ asset('bundles/blogmain/themes/' ~ blog_theme ~ '/css/bootstrap.css') }}" media="screen">
-    <link rel="stylesheet" href="{{ asset('bundles/blogmain/themes/' ~ blog_theme ~ '/css/overrides.css') }}">
+    <link rel="stylesheet" href="{{ asset('bundles/blogmain/css/blog.css') }}">
+    <link rel="stylesheet" href="{{ asset('bundles/blogmain/themes/' ~ blog_theme ~ '/css/theme.css') }}">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="{{ asset('js/html5shiv.js') }}"></script>
