--- a/src/Blog/MainBundle/Resources/public/css/blog.css
+++ b/src/Blog/MainBundle/Resources/public/css/blog.css
@@ -43,6 +43,20 @@ a:hover {
     margin-bottom: 20px;
 }
 
+.content {
+    margin-top: 20px;
+}
+
+.form-container {
+    margin-top: 25px;
+}
+
+@media (max-width: 1200px) {
+    .form-container {
+        margin-top: 10px;
+    }
+}
+
 #footer {
     height: 50px;
 }
