--- a/src/Blog/MainBundle/Resources/views/Index/index.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Index/index.html.twig
@@ -1,7 +1,7 @@
 {% extends "::layout.html.twig" %}
 
 {% block page_content %}
-    {% for article in articles %}
+    {% for article in pagination %}
         <div class="row article">
             <div class="col-lg-12">
                 <div>
@@ -13,8 +13,10 @@
                             {{ article.created | date('M d, Y') }}
                         </span>
                     </h4>
+                    <a href="#" class="btn btn-primary btn-xs">Edit post</a>
+                    <a href="#" class="btn btn-danger btn-xs">Delete post</a>
                 </div>
-                <div>
+                <div class="content">
                     {{ article.content | raw }}
                 </div>
             </div>
@@ -28,4 +30,8 @@
         </div>
     </div>
     {% endfor %}
+
+    <div class="navigation">
+        {{ knp_pagination_render(pagination, 'BlogMainBundle:Common:pagination.html.twig') }}
+    </div>
 {% endblock %}
