--- a/src/Blog/MainBundle/Resources/views/Index/newPost.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Index/newPost.html.twig
@@ -1,17 +1,27 @@
 {% extends "::layout.html.twig" %}
 
 {% block page_content %}
-    <div class="well">
+    <div class="form-container">
         <form action="{{ path("new_post") }}" method="post" class="bs-example form-horizontal">
             <fieldset>
                 <div class="form-group">
-                    <label for="username" class="col-lg-2 control-label">Title</label>
+                    <label for="title" class="col-lg-2 control-label">Title</label>
                     <div class="col-lg-10">
                         <input type="text" class="form-control" id="title" name="title" required="required" placeholder="Enter post's title">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputPassword" class="col-lg-2 control-label">Content</label>
+                    <label for="category" class="col-lg-2 control-label">Category</label>
+                    <div class="col-lg-10">
+                        <select id="category" name="category">
+                            {% for category in categories %}
+                                <option value="{{ category.slug }}">{{ category.title }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="content" class="col-lg-2 control-label">Content</label>
                     <div class="col-lg-10">
                         <textarea id="content" name="content" class="ckeditor"></textarea>
                     </div>
