--- a/src/Blog/MainBundle/Resources/views/Index/editPost.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Index/editPost.html.twig
@@ -2,12 +2,12 @@
 
 {% block page_content %}
     <div class="form-container">
-        <form action="{{ path("new_post") }}" method="post" class="bs-example form-horizontal">
+        <form action="{{ url('edit_post', { 'postId': article.id }) }}" method="post" class="bs-example form-horizontal">
             <fieldset>
                 <div class="form-group">
                     <label for="title" class="col-lg-2 control-label">Title</label>
                     <div class="col-lg-10">
-                        <input type="text" class="form-control" id="title" name="title" required="required" placeholder="Enter post's title">
+                        <input type="text" class="form-control" id="title" name="title" required="required" value="{{ article.title }}" placeholder="Enter post's title">
                     </div>
                 </div>
                 <div class="form-group">
@@ -15,7 +15,7 @@
                     <div class="col-lg-10">
                         <select id="category" name="category">
                             {% for category in categories %}
-                                <option value="{{ category.id }}">{{ category.title }}</option>
+                                <option value="{{ category.id }}" {% if category.id == article.category.id %}SELECTED{% endif %}>{{ category.title }}</option>
                             {% endfor %}
                         </select>
                     </div>
@@ -23,7 +23,7 @@
                 <div class="form-group">
                     <label for="content" class="col-lg-2 control-label">Content</label>
                     <div class="col-lg-10">
-                        <textarea id="content" name="content" class="ckeditor"></textarea>
+                        <textarea id="content" name="content" class="ckeditor">{{ article.content }}</textarea>
                     </div>
                 </div>
                 <div class="form-group">
@@ -37,7 +37,7 @@
 {% endblock %}
 
 {% block javascripts %}
-<script src="{{ asset('bundles/blogmain//ckeditor/ckeditor.js') }}"></script>
-<script src="{{ asset('bundles/blogmain//ckeditor/adapters/jquery.js') }}"></script>
+    <script src="{{ asset('bundles/blogmain//ckeditor/ckeditor.js') }}"></script>
+    <script src="{{ asset('bundles/blogmain//ckeditor/adapters/jquery.js') }}"></script>
 
 {% endblock %}
