--- a/src/Blog/MainBundle/Resources/views/Index/deletePost.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Index/deletePost.html.twig
@@ -2,6 +2,16 @@
 
 {% block page_content %}
     <div class="form-container">
+
+        <div class="panel panel-danger">
+            <div class="panel-heading">
+                <h3 class="panel-title">Warning!</h3>
+            </div>
+            <div class="panel-body">
+                You are about to delete this post. Once you delete it, you cannot undo the operation.
+            </div>
+        </div>
+
         <div class="row article">
             <div class="col-lg-12">
                 <div>
@@ -22,17 +32,11 @@
         <form action="{{ url('delete_post', { 'postId': article.id }) }}" method="post" class="bs-example form-horizontal">
             <fieldset>
                 <div class="form-group">
-                    <div class="col-lg-10 col-lg-offset-2">
+                    <div class="col-lg-12">
                         <button type="submit" id="submit" name="submit" class="btn btn-danger">Delete this post</button>
                     </div>
                 </div>
             </fieldset>
         </form>
     </div>
-{% endblock %}
-
-{% block javascripts %}
-    <script src="{{ asset('bundles/blogmain//ckeditor/ckeditor.js') }}"></script>
-    <script src="{{ asset('bundles/blogmain//ckeditor/adapters/jquery.js') }}"></script>
-
 {% endblock %}
