--- a/src/Blog/MainBundle/Resources/views/Index/editPost.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Index/editPost.html.twig
@@ -28,7 +28,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-lg-10 col-lg-offset-2">
-                        <button type="submit" id="submit" name="submit" class="btn btn-primary">Publish</button>
+                        <button type="submit" id="submit" name="submit" class="btn btn-primary">Modify</button>
                     </div>
                 </div>
             </fieldset>
