--- a/src/Blog/MainBundle/Resources/public/css/blog.css
+++ b/src/Blog/MainBundle/Resources/public/css/blog.css
@@ -3,7 +3,7 @@
 }
 
 .bs-masthead {
-    margin-bottom: 40px;
+    margin-bottom: 50px;
 }
 
 @media (min-width: 1200px) {
@@ -39,7 +39,7 @@ a:hover {
     margin-bottom: 20px;
 }
 
-.article {
+.post {
     margin-bottom: 20px;
 }
 
@@ -49,6 +49,10 @@ a:hover {
 
 .form-container {
     margin-top: 25px;
+}
+
+.delete-post {
+    margin-top: 15px;
 }
 
 @media (max-width: 1200px) {
