--- a/src/Blog/MainBundle/Resources/views/Post/view.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Post/view.html.twig
@@ -1,20 +1,25 @@
 {% extends "::layout.html.twig" %}
 
+{% block section %}
+    <li>View post</li>
+    <li>{{ post.title | capitalize }}</li>
+{% endblock %}
+
 {% block page_content %}
-    <div class="row article">
+    <div class="row post">
         <div class="col-lg-12">
             <div>
-                <h3>{{ article.title }}</h3>
+                <h3>{{ post.title }}</h3>
             </div>
             <div>
                 <h4>
                     <span class="label label-default">
-                        {{ article.created | date('M d, Y') }}
+                        {{ post.created | date('M d, Y') }}
                     </span>
                 </h4>
             </div>
             <div class="content">
-                {{ article.content | raw }}
+                {{ post.content | raw }}
             </div>
         </div>
     </div>
