--- a/src/Blog/MainBundle/Resources/views/Post/view.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Post/view.html.twig
@@ -23,4 +23,9 @@
             </div>
         </div>
     </div>
+    <div class="row post">
+        <div class="col-lg-12">
+            <div class="fb-comments" data-href="{{ url('view_post', { 'postId': post.id }) }}" data-numposts="5" data-colorscheme="light"></div>
+        </div>
+    </div>
 {% endblock %}
