--- a/src/Blog/MainBundle/Resources/public/css/blog.css
+++ b/src/Blog/MainBundle/Resources/public/css/blog.css
@@ -6,12 +6,6 @@
     margin-bottom: 50px;
 }
 
-@media (min-width: 1200px) {
-    .container {
-        width: 85%;
-    }
-}
-
 h2 {
     margin-bottom: 15px;
 }
@@ -29,7 +23,6 @@ a:hover {
     margin: 0px 0 20px;
     border-bottom: 1px solid #eeeeee;
 }
-
 
 .list-group-item {
     border: 0px;
@@ -55,12 +48,47 @@ a:hover {
     margin-top: 15px;
 }
 
-@media (max-width: 1200px) {
+#footer {
+    height: 50px;
+}
+
+@media (max-width: 767px) {
     .form-container {
         margin-top: 10px;
     }
+
+    .form-control {
+        width: 93%;
+        margin-left: 15px;
+    }
+
+    .navbar-form {
+        border-bottom: 0px;
+        margin-bottom: 0px;
+        padding-top: 15px;
+    }
+
+    .navbar-collapse {
+        border-top: 0px;
+    }
 }
 
-#footer {
-    height: 50px;
+@media (min-width: 1200px) {
+    .container {
+        width: 85%;
+    }
+}
+
+@media (max-width: 1200px) {
+    .page {
+        margin-top: 145px;
+    }
+
+    .bs-masthead {
+        margin-bottom: 30px;
+    }
+
+    .post {
+        margin-bottom: 0px;
+    }
 }
