--- a/src/Blog/MainBundle/Resources/views/Post/view.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Post/view.html.twig
@@ -12,11 +12,12 @@
                 <h3>{{ post.title }}</h3>
             </div>
             <div>
-                <h4>
-                    <span class="label label-default">
-                        {{ post.created | date('M d, Y') }}
-                    </span>
-                </h4>
+                <h6>
+                    {{ post.created | date('M d, Y') }}
+                    {% if show_category == true %}
+                        - in <a href="{{ url('homepage') }}category/{{ post.category.slug }}">{{ post.category.title | capitalize }}</a>
+                    {% endif %}
+                </h6>
             </div>
             <div class="content">
                 {{ post.content | raw }}
