--- a/src/Blog/MainBundle/Resources/public/css/blog.css
+++ b/src/Blog/MainBundle/Resources/public/css/blog.css
@@ -40,6 +40,11 @@ a:hover {
     margin-top: 20px;
 }
 
+.content img {
+    max-width: 200px;
+    display:block;
+}
+
 .form-container {
     margin-top: 25px;
 }
@@ -78,6 +83,13 @@ a:hover {
 
     .navbar-collapse {
         border-top: 0px;
+    }
+
+    .content img {
+        max-width: 200px;
+        width: 32% !important;
+        height:auto !important;
+        display:block;
     }
 }
 
