--- a/src/Blog/MainBundle/Resources/views/Post/view.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Post/view.html.twig
@@ -2,7 +2,7 @@
 
 {% block section %}
     <li>View post</li>
-    <li>{{ post.title | capitalize }}</li>
+    <li>{{ post.title }}</li>
 {% endblock %}
 
 {% block page_content %}
