--- a/src/Blog/MainBundle/Resources/views/Category/delete.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Category/delete.html.twig
@@ -42,7 +42,7 @@
                 <tbody>
                 {% for post in category.posts %}
                     <tr>
-                        <td>{{ post.title | capitalize }}</td>
+                        <td>{{ post.title }}</td>
                         <td>
                             <a href="{{ url('edit_post', { 'postId': post.id }) }}"class="btn btn-info btn-sm">Edit</a>
                             <a href="{{ url('delete_post', { 'postId': post.id }) }}"class="btn btn-danger btn-sm">Delete</a>
