--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -93,16 +93,20 @@
                 {% endfor %}
             </div>
 
-            {% if app.user and is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+
                 <h2>Admin</h2>
                 <div class="list-group">
-                    {% if categories | length > 0 %}
-                        <a class="list-group-item" href="{{ url('new_post') }}">&raquo; New post</a>
+                    {% if app.user and is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                        {% if categories | length > 0 %}
+                            <a class="list-group-item" href="{{ url('new_post') }}">&raquo; New post</a>
+                        {% endif %}
+                        <a class="list-group-item" href="{{ url('list_categories') }}">&raquo; Categories</a>
+                        <a class="list-group-item" href="{{ url('fos_user_security_logout') }}">&raquo; Logout</a>
+                    {% else %}
+                        <a class="list-group-item" href="{{ url('fos_user_security_login') }}">&raquo; Login</a>
                     {% endif %}
-                    <a class="list-group-item" href="{{ url('list_categories') }}">&raquo; Categories</a>
-                    <a class="list-group-item" href="{{ url('fos_user_security_logout') }}">&raquo; Logout</a>
                 </div>
-            {% endif %}
+
         </div>
     </div>
 </div>
