--- a/src/Blog/MainBundle/Resources/views/Post/edit.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Post/edit.html.twig
@@ -33,6 +33,15 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label for="status" class="col-lg-2 control-label">Status</label>
+                    <div class="col-lg-10">
+                        <select id="status" class="form-control" name="status">
+                            <option value="1" {% if post.status == 1 %}SELECTED{% endif %}>Published</option>
+                            <option value="2" {% if post.status == 2 %}SELECTED{% endif %}>Not published</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
                     <div class="col-lg-10 col-lg-offset-2">
                         <button type="submit" id="submit" name="submit" class="btn btn-primary">Modify</button>
                     </div>
