--- a/src/Blog/MainBundle/Resources/views/Post/view.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Post/view.html.twig
@@ -26,7 +26,15 @@
     </div>
     <div class="row post">
         <div class="col-lg-12">
-            <div class="fb-comments" data-href="{{ url('view_post', { 'postId': post.id, 'slug': post.slug }) }}" data-numposts="5" data-colorscheme="light"></div>
+            <div class="fb-comments" data-href="{{ url('view_post', { 'postId': post.id, 'slug': post.slug }) }}" data-send="false" data-num-posts="5" mobile="false"></div>
+            <style>
+                .fb-comments, .fb-comments iframe[style], .fb-like-box, .fb-like-box iframe[style] {
+                    width: 100% !important;
+                }
+                .fb-comments span, .fb-comments iframe span[style], .fb-like-box span, .fb-like-box iframe span[style] {
+                    max-width: 600px; width: 100% !important;
+                }
+            </style>
         </div>
     </div>
 {% endblock %}
