--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{{ asset('bundles/blogmain/themes/' ~ blog_theme ~ '/css/bootstrap.css') }}" media="screen">
     <link rel="stylesheet" href="{{ asset('bundles/blogmain/css/blog.css') }}">
     <link rel="stylesheet" href="{{ asset('bundles/blogmain/themes/' ~ blog_theme ~ '/css/theme.css') }}">
+    <link rel="stylesheet" href="{{ asset('bundles/blogmain/css/datepicker.css') }}">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="{{ asset('js/html5shiv.js') }}"></script>
@@ -138,6 +139,7 @@
 
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="{{ asset('bundles/blogmain/js/bootstrap.js') }}"></script>
+<script src="{{ asset('bundles/blogmain/js/bootstrap-datepicker.js') }}"></script>
 
 {% block javascripts %}{% endblock %}
 
