--- a/src/Blog/MainBundle/Resources/views/Post/edit.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Post/edit.html.twig
@@ -32,6 +32,14 @@
                         <textarea id="content" name="content" class="ckeditor">{{ post.content }}</textarea>
                     </div>
                 </div>
+
+                <div class="form-group">
+                    <label for="title" class="col-lg-2 control-label">Created</label>
+                    <div class="col-lg-10">
+                        <input READONLY type="text" class="form-control" id="created" name="created" required="required" value="{{ post.created | date('Y-m-d') }}" placeholder="Enter post's publishing date">
+                    </div>
+                </div>
+
                 <div class="form-group">
                     <label for="status" class="col-lg-2 control-label">Status</label>
                     <div class="col-lg-10">
@@ -54,5 +62,10 @@
 {% block javascripts %}
     <script src="{{ asset('bundles/blogmain//ckeditor/ckeditor.js') }}"></script>
     <script src="{{ asset('bundles/blogmain//ckeditor/adapters/jquery.js') }}"></script>
+    <script>
+        $('#created').datepicker({
+            format: 'yyyy-mm-dd'
+        });
+    </script>
 
 {% endblock %}
