--- a/src/Blog/MainBundle/Resources/views/Post/unpublished.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Post/unpublished.html.twig
@@ -28,6 +28,7 @@
                             <td>
                                 <a href="{{ url('edit_post', { 'postId': post.id }) }}"class="btn btn-info btn-sm">Edit</a>
                                 <a href="{{ url('delete_post', { 'postId': post.id }) }}"class="btn btn-danger btn-sm">Delete</a>
+                                <a href="{{ url('view_post', { 'postId': post.id, 'slug': post.slug }) }}"class="btn btn-primary btn-sm">View</a>
                             </td>
                         </tr>
                     {% endfor %}
