--- a/src/Blog/MainBundle/Resources/views/Post/view.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Post/view.html.twig
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block page_content %}
+
     <div class="row post">
         <div class="col-lg-12">
             <div>
@@ -19,9 +20,22 @@
                     {% endif %}
                 </h6>
             </div>
+
+            {% if post.status == 2 %}
+            <div>
+                <span class="label label-warning">Unpublished</span>
+            </div>
+            {% endif %}
+
             <div class="content">
                 {{ post.content | raw }}
             </div>
+
+            {% if post.status == 2 %}
+                <div>
+                    <a href="{{ url('edit_post', { 'postId': post.id }) }}" class="btn btn-primary btn-xs">Edit post</a>
+                </div>
+            {% endif %}
         </div>
     </div>
     <div class="row post">
