--- a/src/Blog/MainBundle/Resources/views/Post/unpublished.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Post/unpublished.html.twig
@@ -13,19 +13,15 @@
                 <table class="table table-striped table-bordered table-hover">
                     <thead>
                     <tr>
-                        <th>Title</th>
-                        <th>Slug</th>
-                        <th>Created</th>
+                        <th>Title and Date</th>
                         <th>Options</th>
                     </tr>
                     </thead>
                     <tbody>
                     {% for post in pagination %}
                         <tr>
-                            <td>{{ post.title }}</td>
-                            <td>{{ post.slug }}</td>
-                            <td>{{ post.created | date('M d, Y') }}</td>
-                            <td>
+                            <td>{{ post.title }}<br/>{{ post.created | date('M d, Y') }}</td>
+                            <td class="admin-options">
                                 <a href="{{ url('edit_post', { 'postId': post.id }) }}"class="btn btn-info btn-sm">Edit</a>
                                 <a href="{{ url('delete_post', { 'postId': post.id }) }}"class="btn btn-danger btn-sm">Delete</a>
                                 <a href="{{ url('view_post', { 'postId': post.id, 'slug': post.slug }) }}"class="btn btn-primary btn-sm">View</a>
