Add space above facebook commenting

--- a/src/Blog/MainBundle/Resources/views/Post/view.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Post/view.html.twig
@@ -38,7 +38,7 @@
             {% endif %}
         </div>
     </div>
-    <div class="row post">
+    <div class="row facebook-comments">
         <div class="col-lg-12">
             <div class="fb-comments" data-href="{{ url('view_post', { 'postId': post.id, 'slug': post.slug }) }}" data-send="false" data-num-posts="5" mobile="false"></div>
             <style>
