--- a/src/Blog/MainBundle/Resources/views/Post/new.html.twig
+++ b/src/Blog/MainBundle/Resources/views/Post/new.html.twig
@@ -43,7 +43,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-lg-10 col-lg-offset-2">
-                        <button type="submit" id="submit" name="submit" class="btn btn-primary">Publish</button>
+                        <button type="submit" id="submit" name="submit" class="btn btn-primary">Save Post</button>
                     </div>
                 </div>
             </fieldset>
